examples/invalid/mixed/fibonacci_con_errores.casc
#Programa que genera los primeros N numeros de la serie de Fibonacci 
#N es un número entero ingresado por el usuario

#falta la palabra programa
{
  #falta un punto y coma
  entero N=0
  mientras N<0 o N==0 {
    escribe "Ingresa un número mayor o igual a 1:";
    lee N;	
  }

  escribe "Los $N primeros términos de la serie de Fibonacci son:";

  escribe 1;
  si N>2 entonces{
    escribe 1;
  #falta llave que cierra
  si N>2 entonces {
    entero fibo1=1;
    entero fibo2=1;
    entero fibonacci =0;
    entero i=0;
    para i desde 3 hasta N{
      fibonacci = fibo1 + fibo2;
      escribe fibonacci;
      fibo1 = fibo2;
      fibo2 = fibonacci;
    }
  }
  escribe "fin del programa";
}programa
$
#la palabra programa antes de la llave que abre